NSV demux lock-up
The attached file freezes the NSV demux.
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Rémi Denis-Courmont added Component::Demuxers Severity::normal Type::bug Version::master git + 1 deleted label
added Component::Demuxers Severity::normal Type::bug Version::master git + 1 deleted label
- Rémi Denis-Courmont changed milestone to %Bugs paradize
changed milestone to %Bugs paradize
- Author Maintainer
Added attachment:
You are on fire!
:-)
- Rémi Denis-Courmont changed milestone to %2.2.5
changed milestone to %2.2.5
- Filip Roséen assigned to @FilipRoseen-refp and unassigned @MigrationBot
assigned to @FilipRoseen-refp and unassigned @MigrationBot
- Rémi Denis-Courmont added Status::fixed label
added Status::fixed label
- Rémi Denis-Courmont closed
closed
= 87cf24c
=[[http://git.videolan.org/?p=vlc.git;a=commit;h=87cf24c demux/nsv: invalid NSVf header size leads to infinite loop (fixes #17563 (closed))]]
Please register or sign in to reply